data/derived/comb/progs/unify/prog8561.ml.out
Characters 359-364:
  |Hoi(a,b) -> ("sin(pi*"^(exp a)^")/("("cos(pi*"^(exp b)^")")")");;
                                  ^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
